fixed routes generation in IE and Opera fixed italian translation fixed popover overflow in IE updated gems updated changelog

--- a/app/assets/stylesheets/navbar.css.less
+++ b/app/assets/stylesheets/navbar.css.less
@@ -116,6 +116,7 @@
 
 .popover-elements {
   font-size: 12px;
+  overflow: hidden;
 
   a {
     display: table;
@@ -146,6 +147,7 @@
   }
 
   .popover-element-content {
+    width: 150px;
     max-width: 150px;
     overflow: hidden;
     line-height: 16px;
